fix width of elements and edit mobile view

--- a/src/containers/Header.scss
+++ b/src/containers/Header.scss
@@ -26,9 +26,9 @@
     }
 
     .rightSide, .closeRightSide {
+
       @include Display(row, flex-start, stretch);
       width: 60%;
-
 
       > * {
         text-align: center;
@@ -94,6 +94,7 @@
     .Header {
       position: fixed;
       height: 40px;
+      z-index: 6000;
 
       .leftSide {
         @include Display(row, flex-end, center);
@@ -123,7 +124,7 @@
           padding: 0 !important;
           animation: heightBtn 1s;
           height: 30px;
-          border-bottom: 1px solid rgba(252, 252, 252, 0.78);
+          //border-bottom: 1px solid rgba(252, 252, 252, 0.78);
           font-size: 1rem;
 
           &:hover {
