--- a/src/containers/jobHistory/Experience.scss
+++ b/src/containers/jobHistory/Experience.scss
@@ -4,7 +4,7 @@
 .Experience {
   margin: auto;
   padding: 25px;
-  width: 90%;
+  width: 95%;
 
   > h4 {
     @media only screen and (max-width: 768px) {
@@ -50,12 +50,17 @@
     position: relative;
 
     &:before {
-      content: url("../../assets/right-arrow.png");
+      content: "";
+      width: 8px;
+      height: 8px;
+      border-radius: 50px;
+      background-color: #545454;
       position: absolute;
-      left: -25px;
-      top: 3px;
-
+      left: -15px;
+      top: 12px;
+      @media only screen and (max-width: 768px) {
+        top: 10px;
+      }
     }
-
   }
 }
