--- a/src/containers/Education.scss
+++ b/src/containers/Education.scss
@@ -5,14 +5,18 @@
   width: 90%;
   margin: auto;
   padding-top: 80px;
+  @media only screen and (max-width: 600px) {
 
+    width: 95%;
+
+  }
   .universities {
     @include Display(column, center, center);
     border-radius: $BorderRadius;
     margin: 20px auto;
     padding: 40px 70px;
     box-shadow: $BoxShadow;
-    width: 80%;
+    width: 90%;
     @media only screen and (max-width: 600px) {
       padding: 20px;
       width: 90%;
