--- a/src/containers/Projects.scss
+++ b/src/containers/Projects.scss
@@ -4,8 +4,15 @@
 .Projects {
   width: 90%;
   margin: auto;
+  @media only screen and (max-width: 768px) {
+    width: 95%;
+  }
   .projectsContent {
-
+    width: 90%;
+    margin: auto;
+    @media only screen and (max-width: 768px) {
+      width: 95%;
+    }
     :nth-child(odd) {
       flex-direction: row;
 
@@ -35,7 +42,7 @@
       > img {
         width: 35%;
         @media only screen and (max-width: 768px) {
-          width: 50%!important;
+          width: 50% !important;
         }
       }
 
@@ -43,17 +50,19 @@
         width: 60%;
         @media only screen and (max-width: 900px) {
           @include Display(column, center, center);
-          width: 70%;
+          width: 85%;
 
         }
         @media only screen and (max-width: 768px) {
-         h3{
-           font-size: 1rem;
-           white-space: nowrap;
-         }
+          h3 {
+            font-size: .8rem;
+            white-space: nowrap;
+          }
         }
+
         button {
-          margin:  20px 0;
+          min-width: 150px;
+          margin: 20px 0;
 
         }
       }
