--- a/src/containers/Skills.scss
+++ b/src/containers/Skills.scss
@@ -13,6 +13,10 @@
   .skillItems {
     width: 80%;
     margin: 50px auto 0 auto;
+    @media only screen and (max-width: 768px) {
+      width: 95%;
+
+    }
 
     h2, h5 {
       margin: 0 !important;
