--- a/src/containers/jobHistory/JobHistory.scss
+++ b/src/containers/jobHistory/JobHistory.scss
@@ -18,7 +18,7 @@
     background-size: cover;
     >*{
       margin: 20px auto;
-      width: 90%;
+      //width: 90%;
 
       >*{
         border-radius: $BorderRadius;
@@ -41,7 +41,7 @@
 
     > * {
       width: 100% !important;
-      margin: 0 !important;
+
 
       > * {
         border-bottom: $Border;
