change resume and pic and some content

--- a/src/containers/AboutMe.scss
+++ b/src/containers/AboutMe.scss
@@ -25,7 +25,7 @@
       height: 200px;
       position: relative;
       box-shadow: 10px 10px 42px 0 rgba(0, 0, 0, 0.75);
-      background-image: url("../../public/MyPic.png");
+      background-image: url("../../public/MyPic.JPG");
       background-position: center; /* Center the image */
       background-size: cover; /* Resize the background image to cover the entire container */
 
