--- a/src/index.scss
+++ b/src/index.scss
@@ -5,7 +5,14 @@ body {
   sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  caret-color: transparent;
+
 }
+
+input, textarea {
+  caret-color: #1622ca;
+}
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
